fix: 修正authStore本地存储读取逻辑
